src/snapshots/monkey_language_server__parser__test__return_unhappy_3.snap
---
source: src/parser.rs
description: "return [;"
expression: stmts
---
[
    Return {
        token: Token(Return, "return", (0,0)->(0,6)),
        value: Some(
            Err(
                Err(ExpectedTokenNotFound("SyntaxError: Expected ']' not found."), (0,8)->(0,9)),
            ),
        ),
    },
]
