src/snapshots/monkey_language_server__parser__test__string_literal.snap
---
source: src/parser.rs
description: "\"hello world\""
expression: stmts
---
[
    StringLiteral {
        token: Token(Str, "\"hello world\"", (0,0)->(0,13)),
        value: "\"hello world\"",
    },
]
